[gd_scene load_steps=4 format=3 uid="uid://ioe5eqs4ljqd"]

[ext_resource type="Script" uid="uid://d2sqg1y0dwc3a" path="res://high_scores.gd" id="1_l4bjd"]
[ext_resource type="Theme" uid="uid://chp13krld84ky" path="res://Biggish Font.tres" id="2_po4cu"]
[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="3_jjdw4"]

[node name="High Scores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l4bjd")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 438.0
theme = ExtResource("3_jjdw4")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 460.0
offset_right = 356.0
offset_bottom = 531.0
theme = ExtResource("2_po4cu")

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 793.0
offset_top = 460.0
offset_right = 1149.0
offset_bottom = 531.0
theme = ExtResource("2_po4cu")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 540.0
offset_right = 356.0
offset_bottom = 620.0
theme = ExtResource("3_jjdw4")
text = "Add Score"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 788.0
offset_top = 542.0
offset_right = 1151.0
offset_bottom = 622.0
theme = ExtResource("3_jjdw4")
text = "Remove Score"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
